# agenticdoc

./: .gitignore  README.md  draw.py  pyproject.toml  requirements.txt  run_layout.py  tempdraw.py
agents/: layout_detection_agent.py
extractors/: heuristic_layout_detector.py  layout_models.py  ml_layout_detector.py  pdf_extractor.py
output/paper/json/: extraction.json  layout.json
plot/: draw.py
tests/: test_layout_detection_agent.py
